戻るボタンと削除ボタンの追加中
